--- a/2.relative/index2.html
+++ b/2.relative/index2.html
@@ -7,7 +7,7 @@
   <title>line-height</title>
   <style>
     body {
-      line-height: 1.2; /* 后代元素继承了无单位的值 */
+      line-height: 1.2; /* 后代元素继承了无单位的值，相对于font-size定义 */
        /* line-height: 1.2em; 19.2px, 后代元素继承了19.2px */
     }
 
